<resources>
    <!--NO BORRAR EL NOMBRE DE LA APP-->
    <string name="app_name">EcoCasa</string>
    <string name="titulo">Titulo</string>
    <string name="titulo_del_post">Titulo del Post</string>
    <string name="descripcion_del_post">Descripcion del post</string>
    <string name="relacionado_a">Relacionado a…</string>
    <string name="energia_eolica">Energía Eólica</string>
    <string name="energia_electrica">Energía Eléctrica</string>
    <string name="ecolog_a">Ecologia</string>
    <string name="crear_post">Crear Post</string>
    <string name="ecocasa">EcoCasa</string>
    <string name="login">LogIn</string>
    <string name="logo_de_la_aplicacion">Logo de la Aplicacion</string>
    <string name="usuarioEmail">Usuario o Email</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="olvidaste_tu_contrasenia">¿Olvidaste tu contraseña?</string>
    <string name="registrate">Regístrate</string>
    <string name="editarperfil">EditarPerfil</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">Email</string>
    <string name="repetir_contrasenia">Repetir Contraseña</string>
    <string name="requerimientos_pass">La contraseña debe tener por lo menos 8 caracteres, contener letras y números</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="nueva_contrasenia">Nueva\nContraseña</string>
    <string name="validar_email">Validar Email</string>
    <string name="reestablecer_contrasenia">Reestablecer Contraseña</string>
    <string name="validar_nemail">Validar\nEmail</string>
    <string name="instruccion_token">Ingrese el token enviado a su email</string>
    <string name="token_recibido">Token recibido</string>
    <string name="registrarse">Registrarse</string>
    <string name="si_ya_tienes_un_usuario">Si ya tienes un usuario</string>
    <string name="inicia_sesion">inicia sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_encabezado_desc">Descubre un nuevo sistema para la incorporacion de energia eolica hogareña</string>
    <string name="usuario">Usuario</string>


    <string name="whatsapp">WhatsApp</string>
    <string name="instagram">Instagram</string>
    <string name="mail">Correo Electrónico</string>
    <string name="enviar_token">Enviar Token</string>
    <string name="imagen_principal">Imagen Principal</string>

    <string-array name="categorias_array">
        <item>Todos</item>
        <item>Comercio</item>
        <item>Sitio de Interés</item>
        <item>Localidades Beneficios Impositivos</item>


    </string-array>

</resources>
