<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F6EC">

    <!-- Título de Registro -->
    <TextView
        android:id="@+id/tv_titulo_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:textColor="#132625"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp" />

    <!-- Campo de Nombre -->
    <EditText
        android:id="@+id/input_nombre"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/nombre"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo_registro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="#132625"
        android:textColorHint="#132625"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:ignore="Autofill" />

    <!-- Campo de Apellido -->
    <EditText
        android:id="@+id/input_apellido"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/apellido"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/input_nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="#132625"
        android:textColorHint="#132625"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:ignore="Autofill" />

    <!-- Campo de Usuario -->
    <EditText
        android:id="@+id/input_usuario"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/usuario"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/input_apellido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="#132625"
        android:textColorHint="#132625"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:ignore="Autofill" />

    <!-- Campo de Email -->
    <EditText
        android:id="@+id/input_email"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/input_usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="#132625"
        android:textColorHint="#132625"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:ignore="Autofill" />

    <!-- Campo de Contraseña -->
    <EditText
        android:id="@+id/input_pass"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/contrasenia"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/input_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="#132625"
        android:textColorHint="#132625"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:ignore="Autofill" />

    <!-- Campo de Repetir Contraseña -->
    <EditText
        android:id="@+id/input_repetir_pass"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/repetir_contrasenia"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/input_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="#132625"
        android:textColorHint="#132625"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:ignore="Autofill" />

    <!-- Texto de Nota para la contraseña -->
    <TextView
        android:id="@+id/tv_pass_requerimientos"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/requerimientos_pass"
        android:textColor="#132625"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/input_repetir_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <!-- Botón de Registrarse -->
    <Button
        android:id="@+id/btn_registro_usuario"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="@string/registrarse"
        app:layout_constraintTop_toBottomOf="@id/tv_pass_requerimientos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#4F9A6E"
        android:textColor="#FFFFFF" />


    <!-- Texto para iniciar sesión -->
    <TextView
        android:id="@+id/tv_LogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/si_ya_tienes_un_usuario"
        android:textColor="#132625"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_registro_usuario" />


    <!-- Haciendo la parte "inicia sesión" clickeable -->
    <TextView
        android:id="@+id/tv_link_LogIn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/inicia_sesion"
        android:textColor="#132625"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_LogIn"
        app:layout_constraintTop_toTopOf="@id/tv_LogIn" />
</androidx.constraintlayout.widget.ConstraintLayout>
