<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MapaSitiosFragment"
    android:fitsSystemWindows="true">

    <!-- Toolbar personalizada -->
    <include
        android:id="@+id/custom_toolbar"
        layout="@layout/toolbar_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Título -->
    <TextView
        android:id="@+id/tituloMapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:padding="16dp"
        android:text="Mapa de sitios de interés"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Texto informativo -->
    <TextView
        android:id="@+id/textoInformativo"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:text="Seleccione la ubicación que le interese para obtener más detalles." />

    <!-- Fragmento del mapa -->
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1" />

    <!-- Información del local que inicialmente estará oculta -->
    <LinearLayout
        android:id="@+id/infoLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@color/light_green"
        android:padding="16dp"
        android:orientation="vertical">

        <!-- Información de la dirección -->
        <TextView
            android:id="@+id/direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dirección: Calle Falsa 123"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <!-- Información de los horarios -->
        <TextView
            android:id="@+id/horarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Horarios: Lunes a Viernes 9:00 - 18:00"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <!-- Logos de redes sociales -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/whatsappIcon"
                android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/whastapp"
            android:contentDescription="@string/whatsapp"
            android:scaleType="centerInside" />

            <ImageView
                android:id="@+id/instagramIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/instagram"
                android:contentDescription="@string/instagram" />

            <ImageView
                android:id="@+id/mailIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/mail"
                android:contentDescription="@string/mail" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
